@@ -1,5 +1,6 @@
 * Tue Mar 13 2007 Jesse Keating <jkeating@redhat.com>
 - log the rpm2cpio stuff for release notes
+- correctly capture errors from subprocess
 
 * Wed Mar 07 2007 Jesse Keating <jkeating@redhat.com>
 - Call createrepo ourselves for the tree, not buildinstall's job
